2006-01-13  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	ATTENTION: Tcl compatibility affected.

	* include/ns.h:
	* nsd/conn.c:    
	* nsd/pathname.c:
	* nsd/tclcallbacks.c:
	* nsd/tclinit.c:
	* nsd/tclrequest.c:
	* nsd/tclsched.c:
	* nsd/url2file.c:
	* tests/ns_register_filter.test:
	* tests/ns_register_proc.test:
	* tests/url2file.test: Implemented RFE #1404901.

2006-01-11  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c:
	* nsd.nsd.c:
	* nsd/tclcmds.c: Added spooler support which handles
	upload process in separate thread. During the uploading new command 
	ns_upload_stats is available which accepts full url with query
	parametrs of the uploading connection. On uploading finish, 
	statistics is cleared from the memory. Spooler can be disabled 
	using ns_param spooler false in the nssock section of nsd.tcl.

2006-01-11  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/set.c (Ns_SetDelete): fixed off-by-one error when
	compacting the set after element deletion.

2006-01-10  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/driver.c (DriverThread): Added some clarifying comments

2006-01-07  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/driver.c (DriverThread): Add Push() macro to clarify list
	processing of sockets and drivers.

2006-01-06  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* tests/ns_conn.test: fixed basic command test to recognize
	new "contentsentlength" command option.

2006-01-04  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* configure.in:  added test for inet_ntop.
	* nsthread/reentrant.c: use inet_ntop when available which fixes a
	bug on 64 bit ppc, at least under linux.
	* nsd/conn.c: added option to [ns_conn] to set/query contentsentlength
	for getting the correct length into the logfile, when files are
	delivered via event driven I/O. Thanks to Gustaf Neumann for providing
	above fixes.

2006-01-04  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/nsd.h: